--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
   "require": {
     "php": ">=7.2",
     "ext-json": "*",
+    "ext-pdo": "*",
     "dusterio/lumen-passport": "^0.2.9",
     "laravel/lumen-framework": "5.7.*"
   },
