--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,9 @@
     "laravel/lumen-framework": "5.7.*"
   },
   "require-dev": {
-    "fzaninotto/faker": "^1.8",
-    "helmich/phpunit-json-assert": "^2.0"
+    "fzaninotto/faker": "~1.4",
+    "helmich/phpunit-json-assert": "^2.0",
+    "phpunit/phpunit": "~7.0"
   },
   "autoload": {
     "psr-4": {
