--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     "ext-json": "*",
     "ext-pdo": "*",
     "dusterio/lumen-passport": "^0.2.9",
-    "illuminate/mail": "^5.7",
-    "illuminate/notifications": "^5.7",
-    "laravel/lumen-framework": "5.7.*",
+    "illuminate/mail": "^5.7|^5.8",
+    "illuminate/notifications": "^5.7|^5.8",
+    "laravel/lumen-framework": "5.7.*|5.8.*",
     "symfony/yaml": "^4.2"
   },
   "require-dev": {
