--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "ext-json": "*",
     "ext-pdo": "*",
     "dusterio/lumen-passport": "^0.2.9",
-    "illuminate/mail": "^5.7|^5.8",
+    "illuminate/mail": "^5.7",
     "illuminate/notifications": "^5.7",
     "laravel/lumen-framework": "5.7.*",
     "symfony/yaml": "^4.2"
