fix: SonarQube source directory

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,8 @@ sonar.login=a030445727da3c9dc5513a8f1c76223def619a5f
 sonar.sourceEncoding=UTF-8
 sonar.projectKey=lumen-zero
 sonar.projectName=Lumen Zero
-sonar.sources=src/**
+sonar.sources=.
+sonar.exclusions=node_modules/**,vendor/**
 sonar.test.inclusions=tests/**
 sonar.scm.disabled=true
 sonar.php.tests.reportPath=artifacts/junit.xml
