--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,29 @@
 {
   "name": "mathrix/lumen-zero",
   "description": "The main library for Mathrix Lumen REST APIs.",
+  "version": "1.0.1",
   "type": "library",
+  "keywords": [
+    "php",
+    "lumen"
+  ],
+  "homepage": "https://github.com/mathrix-education/lumen-zero",
   "license": "proprietary",
   "authors": [
     {
       "name": "Mathieu Bour",
-      "email": "mathieu@mathrix.fr"
+      "email": "mathieu@mathrix.fr",
+      "homepage": "https://www.linkedin.com/in/mathieu-bour",
+      "role": "Developer"
     }
   ],
-  "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "optimize-autoloader": true
+  "support": {
+    "email": "mathieu@mathrix.fr",
+    "issues": "https://github.com/mathrix-education/lumen-zero/issues",
+    "wiki": "https://github.com/mathrix-education/lumen-zero/wiki",
+    "source": "https://github.com/mathrix-education/lumen-zero",
+    "docs": "https://github.com/mathrix-education/lumen-zero"
   },
-  "prefer-stable": true,
-  "minimum-stability": "dev",
   "require": {
     "php": ">=7.2",
     "ext-json": "*",
@@ -43,5 +51,12 @@
     "psr-4": {
       "Mathrix\\Lumen\\": "tests"
     }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
+  "config": {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
   }
 }
