--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
   "name": "mathrix/lumen-zero",
   "description": "The main library for Mathrix Lumen REST APIs.",
-  "version": "2.0.0-dev",
+  "version": "2.0.0-rc1",
   "type": "library",
   "keywords": [
     "php",
-    "lumen"
+    "lumen",
+    "zero"
   ],
   "homepage": "https://github.com/mathrix-education/lumen-zero",
   "license": "proprietary",
