--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "mathrix/lumen-zero",
   "description": "The main library for Mathrix Lumen REST APIs.",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "type": "library",
   "keywords": [
     "php",
@@ -29,6 +29,7 @@
     "php": ">=7.2",
     "ext-json": "*",
     "ext-pdo": "*",
+    "brick/varexporter": "^0.2.1",
     "haydenpierce/class-finder": "^0.3.1",
     "illuminate/mail": "^5.8",
     "illuminate/notifications": "^5.8",
