--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "mathrix/lumen-zero",
   "description": "The main library for Mathrix Lumen REST APIs.",
-  "version": "3.0.0",
+  "version": "3.0.0-beta.1",
   "type": "library",
   "keywords": [
     "php",
@@ -42,6 +42,7 @@
   },
   "require-dev": {
     "mathrix/coding-standard": "0.9.1",
+    "mockery/mockery": "^1.3",
     "phpunit/phpunit": "^8.0"
   },
   "autoload": {
