--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
     "laravel/lumen-framework": "5.8.* || ^6.0"
   },
   "require-dev": {
+    "codedungeon/phpunit-result-printer": "^0.26.2",
     "mathrix/coding-standard": "0.9.1",
     "mockery/mockery": "^1.3",
     "phpunit/phpunit": "^8.0"
