fix(sonar): change sonar server url

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
-sonar.host.url=https://sonarqube.mathrix.fr
+sonar.host.url=https://sonar.mathrix.tech
 sonar.sourceEncoding=UTF-8
 sonar.projectKey=lumen-zero
 sonar.projectName=Lumen Zero
 sonar.sources=.
-sonar.exclusions=node_modules/**,vendor/**
+sonar.exclusions=vendor/**
 sonar.test.inclusions=tests/**
-sonar.php.tests.reportPath=artifacts/junit.xml
-sonar.php.coverage.reportPaths=artifacts/coverage.xml
+sonar.php.tests.reportPath=storage/artifacts/junit.xml
+sonar.php.coverage.reportPaths=storage/artifacts/coverage.xml
