--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "mathrix/lumen-zero",
+  "name": "mathrix-education/lumen-zero",
   "description": "The main library for Mathrix Lumen REST APIs.",
   "version": "3.0.0-beta.1",
   "type": "library",
