--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup PHP
-        uses: shivammathur/setup-php@1.5.2
+        uses: shivammathur/setup-php@1.6.0
         with:
-          php-version: 7.3
-          extension-csv: mbstring, gmp
+          php-version: 7.4
+          extension-csv: mbstring
           coverage: none
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
@@ -26,8 +26,8 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@1.5.0
         with:
-          php-version: 7.3
-          extension-csv: mbstring, gmp
+          php-version: 7.4
+          extension-csv: mbstring
           coverage: pcov
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
