--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
         uses: shivammathur/setup-php@1.6.0
         with:
           php-version: 7.4
-          extension-csv: mbstring
+          extensions: mbstring
           coverage: none
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
@@ -27,7 +27,7 @@ jobs:
         uses: shivammathur/setup-php@1.5.0
         with:
           php-version: 7.4
-          extension-csv: mbstring
+          extensions: mbstring
           coverage: pcov
       - name: Install dependencies
         run: composer install --no-progress --no-suggest --prefer-dist --optimize-autoloader
