--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,6 @@
     "source": "https://github.com/mathrix-education/lumen-zero",
     "docs": "https://github.com/mathrix-education/lumen-zero"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "git@github.com:mathrix-education/coding-standard.git"
-    }
-  ],
   "require": {
     "php": ">=7.4",
     "ext-json": "*",
@@ -42,7 +36,7 @@
   },
   "require-dev": {
     "codedungeon/phpunit-result-printer": "^0.26.2",
-    "mathrix/coding-standard": "0.9.1",
+    "mathrix-education/coding-standard": "^1.0.0",
     "mockery/mockery": "^1.3",
     "phpunit/phpunit": "^8.0"
   },
