ci(actions): use sonarcloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
-sonar.host.url=https://sonar.mathrix.tech
+sonar.host.url=https://sonarcloud.io
+sonar.organization=mathrix-education
+sonar.projectKey=mathrix-education_lumen-zero
 sonar.sourceEncoding=UTF-8
-sonar.projectKey=lumen-zero
-sonar.projectName=Lumen Zero
 sonar.sources=.
 sonar.exclusions=vendor/**
 sonar.test.inclusions=tests/**
