fix(ci): master branch should not have any target

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: Unshallow
-        run: git checkout "${GITHUB_REF:11}"
+      - name: Extract git context
+        id: git
+        shell: bash
+        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
       - name: Download coverage reports
         uses: actions/download-artifact@v1.0.0
         with:
@@ -64,15 +66,15 @@ jobs:
           echo "sonar.projectVersion=${VERSION}" >> sonar-project.properties
 
           # Setup branches
-          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          if [[ "$CURRENT_BRANCH" = "dev" ]]; then
+          echo "sonar.branch.name=${{ steps.git.outputs.branch }}" >> sonar-project.properties
+
+          if [[ "${{ steps.git.outputs.branch }}" = "dev" ]]; then
+            echo "sonar.branch.target=master" >> sonar-project.properties
             PARENT_BRANCH="master"
-          else
+          elif [[ "${{ steps.git.outputs.branch }}" != "master" ]]; then
+            echo "sonar.branch.target=dev" >> sonar-project.properties
             PARENT_BRANCH="dev"
           fi
-
-          echo "sonar.branch.name=${CURRENT_BRANCH}" >> sonar-project.properties
-          echo "sonar.branch.target=${PARENT_BRANCH}" >> sonar-project.properties
       - name: Analyse with Sonar Scanner
         uses: mathrix-education/sonar-scanner@master
         with:
